# lazyups

./: .gitignore  .lazyups.config  DEVELOPMENT.md  LICENSE  README.md  build-exe.sh  check-version-sync.sh  mirror.sh  preflight.sh  pyinstaller_entrypoint.py  pyproject.toml  run-code-validations.sh  run.sh  verify-app-with-python-versions.sh
.github/workflows/: ci.yml
src/lazyups/: __init__.py  app.css  app.py  cli.py  config.py  models.py  store.py  validation.py  version.py  widgets.py
tests/: test_app.py  test_cli_validations.py  test_config.py
